--- a/index1.html
+++ b/index1.html
@@ -35,7 +35,7 @@
     <div class="hero-wrapper">
         <header id="header">
             <div class="right-header">
-                <h1 class="name" id="name">Zikra@</h1>
+                <h1 class="name" id="name">موثق في معروف: 350640</h1>
                 <ul>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
@@ -249,7 +249,7 @@
             <li><a href="https://www.snapchat.com/@q.80008?invite_id=zYB9jfOw&locale=ar_SA%40calendar%3Dgregorian&share_id=Z3pYdAV4RpqwCxFaoh3FvQ&sid=9951edbef01d41bebafc24ee58dc5282" target="_blank"><img class="social-img snap" src="images/icons8-snapchat-100.png" alt="icon"></a></li>
         </ul>
 
-        <h5>&copy;Zikra</h5>
+        <h5>موثق في معروف: 350640</h5>
     </footer>
 
     <!-- سكربت Swiper -->
@@ -326,3 +326,4 @@
 
 
 </html>
+
