--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zikra</title>
 
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style1.css">
     <link rel="website icon" type="png" href="images/sahabh_logo.jpg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
@@ -36,11 +36,6 @@
         <header id="header">
             <div class="right-header">
                 <h1 class="name" id="name">موثق في معروف: 350640</h1>
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
             </div>
 
             <img src="images/photo_2025-10-21_20-23-05.jpg" alt="logo" class="logo">
@@ -326,5 +321,6 @@
 
 
 </html>
+
 
 
